always return line coordinates in network order (line.terminal1 -> line.terminal2) (#45)