@@ -8,6 +8,7 @@ package org.gridsuite.geodata.server;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.common.collect.ImmutableList;
+import org.gridsuite.geodata.extensions.Coordinate;
 import org.gridsuite.geodata.server.dto.LineGeoData;
 import org.gridsuite.geodata.server.dto.SubstationGeoData;
 import org.gridsuite.geodata.server.repositories.*;
@@ -24,7 +25,7 @@ import org.springframework.test.context.junit4.SpringRunner;
 import java.util.*;
 import java.util.stream.Collectors;
 
-import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.*;
 
 /**
  * @author Chamseddine Benhamed <chamseddine.benhamed at rte-france.com>
@@ -84,10 +85,36 @@ public class GeoDataServiceTest extends AbstractEmbeddedCassandraSetup  {
                 .id("NHV2_NHV3")
                 .country("FR")
                 .otherCountry("FR")
+                .substationStart("P2")
+                .substationEnd("P3")
                 .coordinates(Arrays.asList(new CoordinateEntity(3, 1), new CoordinateEntity(5, 6), new CoordinateEntity(2, 7)))
                 .build());
 
+        lineEntities.add(LineEntity.builder()
+            .id("NHV2_NHV3_inverted")
+            .country("FR")
+            .otherCountry("FR")
+            .substationStart("P2")
+            .substationEnd("P3")
+            .coordinates(Arrays.asList(new CoordinateEntity(3, 1), new CoordinateEntity(5, 6), new CoordinateEntity(2, 7)))
+            .build());
+
+        lineEntities.add(LineEntity.builder()
+            .id("WRONG_CONFIG")
+            .country("FR")
+            .otherCountry("FR")
+            .substationStart("OOUPS")
+            .substationEnd("P3")
+            .coordinates(Arrays.asList(new CoordinateEntity(3, 1), new CoordinateEntity(5, 6), new CoordinateEntity(2, 7)))
+            .build());
+
         lineRepository.saveAll(lineEntities);
+    }
+
+    static LineGeoData getFromList(List<LineGeoData> list, String id) {
+        Optional<LineGeoData> res = list.stream().filter(l -> l.getId().equals(id)).findAny();
+        assertTrue(res.isPresent());
+        return res.get();
     }
 
     @Test
@@ -100,10 +127,18 @@ public class GeoDataServiceTest extends AbstractEmbeddedCassandraSetup  {
         assertEquals(2, substationsGeoData.stream().filter(s -> s.getId().equals("P4")).collect(Collectors.toList()).get(0).getCoordinate().getLat(), 0);
         assertEquals(3, substationsGeoData.stream().filter(s -> s.getId().equals("P4")).collect(Collectors.toList()).get(0).getCoordinate().getLon(), 0);
 
-        List<LineGeoData> linesGeoData = geoDataService.getLines(network, new HashSet<>(Collections.singletonList(Country.FR)));
+        List<LineGeoData> linesGeoData = geoDataService.getLines(network, new HashSet<>(List.of(Country.FR)));
 
-        assertEquals(2, linesGeoData.size());
-        assertEquals(3, linesGeoData.get(0).getCoordinates().size());
+        assertEquals(11, linesGeoData.size());
+        assertEquals(2, getFromList(linesGeoData, "NHV1_NHV2_1").getCoordinates().size()); // line with no coordinate, so [substation1, substation2]
+        List<Coordinate> lineNHV2 = getFromList(linesGeoData, "NHV2_NHV3").getCoordinates();
+        List<Coordinate> lineNHV3 = new ArrayList<>(getFromList(linesGeoData, "NHV2_NHV3_inverted").getCoordinates());
+        Collections.reverse(lineNHV3);
+        assertEquals(lineNHV2, lineNHV3); // should be the same path
+        assertEquals(5, lineNHV2.size()); // line with 3 coordinate, so [substation1, c1, c2, c3, substation2]
+
+        List<Coordinate> wrong = getFromList(linesGeoData, "WRONG_CONFIG").getCoordinates();
+        assertEquals(2, wrong.size()); // wrong substation origin/end, so only (sub1, sub2)
 
         List<SubstationGeoData> substationsGeoData2 = geoDataService.getSubstations(network, new HashSet<>(ImmutableList.of(Country.FR, Country.BE)));
 
@@ -165,6 +200,38 @@ public class GeoDataServiceTest extends AbstractEmbeddedCassandraSetup  {
                 .setG2(0.0)
                 .setB2(386E-6 / 2)
                 .add();
+
+        network.newLine()
+            .setId("NHV2_NHV3_inverted")
+            .setVoltageLevel1(vlhv3.getId())
+            .setBus1(nhv3.getId())
+            .setConnectableBus1(nhv3.getId())
+            .setVoltageLevel2("VLHV2")
+            .setBus2("NHV2")
+            .setConnectableBus2("NHV2")
+            .setR(3.0)
+            .setX(33.0)
+            .setG1(0.0)
+            .setB1(386E-6 / 2)
+            .setG2(0.0)
+            .setB2(386E-6 / 2)
+            .add();
+
+        network.newLine()
+            .setId("WRONG_CONFIG")
+            .setVoltageLevel1(vlhv3.getId())
+            .setBus1(nhv3.getId())
+            .setConnectableBus1(nhv3.getId())
+            .setVoltageLevel2("VLHV2")
+            .setBus2("NHV2")
+            .setConnectableBus2("NHV2")
+            .setR(3.0)
+            .setX(33.0)
+            .setG1(0.0)
+            .setB1(386E-6 / 2)
+            .setG2(0.0)
+            .setB2(386E-6 / 2)
+            .add();
 
         Substation p4 = network.newSubstation()
                 .setId("P4")
